# cellx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  example.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: cellx.yml
_tests/: test_augmentation.py  test_dataset.py  test_layers.py  test_manifold.py  test_serialization.py  test_tools.py
cellx/: callbacks.py  core.py  layers.py  train.py  utils.py
cellx/api/v1/: submit.py
cellx/augmentation/: handler.py  image.py  timeseries.py  utils.py
cellx/io/: __init__.py  reader.py
cellx/layers/: __init__.py  base.py  convolution.py  sampling.py  transform.py
cellx/manifold/: flow.py  projection.py
cellx/networks/: classifier.py  tcn.py  unet.py  vae.py
cellx/tools/: confusion.py  dataset.py  image.py  io.py  projection.py  saliency.py
notebooks/: example.ipynb
