[metadata]
name = cellx
version = 0.1
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
url = https://github.com/quantumjot/cellx
description = cellx libraries
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
  Programming Language :: C++
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
  matplotlib
  numpy
  scikit-image
  scikit-learn
  scipy
  tensorflow
  tensorflow-addons
  tqdm
  dask
  #jax
  keras-tcn

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503 Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py

[options.extras_require]
tests =
  pytest
